--- a/index.html
+++ b/index.html
@@ -26,10 +26,6 @@
 							<li class="submenu">
 								<a href="#">Projects</a>
 								<ul>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
-									<li><a href="contact.html">Contact</a></li>
 									<li class="submenu">
 										<a href="#">Side Projects<span class="icon fa-cubes"><span class="label">Feature</a>
 										<ul>
@@ -50,7 +46,7 @@
 									<li class="submenu">
 										<a href="#">Photography<span class="icon fa-camera"><span class="label">Feature</a>
 										<ul>
-											<li><a href="no-sidebar.html">Collection1</a></li>
+											<li><a href="pearl.html">Collection1</a></li>
 											<li><a href="no-sidebar.html">Collection2</a></li>
 											<li><a href="no-sidebar.html">Collection3</a></li>
 										</ul>
@@ -58,7 +54,7 @@
 									<li class="submenu">
 										<a href="#">Columbia Projects<span class="icon fa-university"><span class="label">Feature</a>
 										<ul>
-											<li><a href="1.html">Zombie Bank</a></li>
+											<li><a href="bank.html">Zombie Bank</a></li>
 											<li><a href="no-sidebar.html">Sublime Gym</a></li>
 											<li><a href="no-sidebar.html">Pipe Bathroom</a></li>
 											<li><a href="no-sidebar.html">Artichoke Age</a></li>
