--- a/pearl.html
+++ b/pearl.html
@@ -84,17 +84,17 @@
 							<!-- Content -->
 								<div class="content">
 									<section>
-										<a href="projects/images/ph1/1.jpg" class="image featured"><img src="projects/images/ph1/1_sm.jpg" alt="" /> Counting Fish </a>
-										<a href="projects/images/ph1/2.jpg" class="image featured"><img src="projects/images/ph1/2_sm.jpg" alt="" /> Counting Fish </a>
-										<a href="projects/images/ph1/3.jpg" class="image featured"><img src="projects/images/ph1/3_sm.jpg" alt="" /> Counting Fish </a>
-										<a href="projects/images/ph1/4.jpg" class="image featured"><img src="projects/images/ph1/4_sm.jpg" alt="" /> Counting Fish </a>
-										<a href="projects/images/ph1/5.jpg" class="image featured"><img src="projects/images/ph1/5_sm.jpg" alt="" /> Counting Fish </a>
+										<a href="projects/images/ph1/1.JPG" class="image featured"><img src="projects/images/ph1/1_sm.jpg" alt="" /> Counting Fish </a>
+										<a href="projects/images/ph1/2.JPG" class="image featured"><img src="projects/images/ph1/2_sm.jpg" alt="" /> Counting Fish </a>
+										<a href="projects/images/ph1/3.JPG" class="image featured"><img src="projects/images/ph1/3_sm.jpg" alt="" /> Counting Fish </a>
+										<a href="projects/images/ph1/4.JPG" class="image featured"><img src="projects/images/ph1/4_sm.jpg" alt="" /> Counting Fish </a>
+										<a href="projects/images/ph1/5.JPG" class="image featured"><img src="projects/images/ph1/5_sm.jpg" alt="" /> Counting Fish </a>
 										<header>
 											<h3>Dolore Amet Consequat</h3>
 										</header>
 										<p>Aliquam massa. Morbi eu faucibus massa. Aliquam mvel neque eros. Vestibulum diam.</p>
 										<p>Vestibus arcu tristique est.</p>
-										<a href="projects/images/ph1/6.jpg" class="image featured"><img src="projects/images/ph1/6_sm.jpg" alt="" /> City on Fire </a>
+										<a href="projects/images/ph1/6.JPG" class="image featured"><img src="projects/images/ph1/6_sm.jpg" alt="" /> City on Fire </a>
 									</section>
 								</div>
 
