--- a/pearl.html
+++ b/pearl.html
@@ -73,7 +73,7 @@
 				<article id="main">
 
 					<header class="special container">
-						<span class="icon fa-mobile"></span>
+						<span class="icon fa-industry"></span>
 						<h2><strong>Honolulu on Fire </strong>USS Arizona</h2>
 						<p>Where that in the center faces the nameless horrors alone.</p>
 					</header>
