--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
 					<header class="special container">
 						<span class="icon fa-barcode"></span>
-						<h2> This is the ideal— the website, permanently <strong>-under construction-</strong> , will only gradually accumulate the requisite expansiveness.</h2>
+						<h2> This is the idea: the website, permanently <strong>under construction</strong> , will only gradually accumulate the requisite expansiveness.</h2>
 						<br />
 						<p>
 						This website, built to display my interests, thoughts, and projects,
@@ -169,11 +169,10 @@
 								<div class="4u 12u(narrower)">
 
 									<section>
-										<span class="icon featured fa-chevron-left"></span>
 										<header>
-											<h3>Poetry Blog</h3>
+											<li><a href="http://sardinesandcappuccinos.blogspot.com/"><span class="icon featured fa-chevron-left"></span><h3>Poetry Blog</h3></a></li>
 										</header>
-										<li><a href="http://sardinesandcappuccinos.blogspot.com/">An eclectic colleciton under an assumed name</a></li>
+										<h5>An eclectic colleciton under an assumed name</h5>
 									</section>
 
 								</div>
@@ -193,9 +192,9 @@
 									<section>
 										<span class="icon featured fa-chevron-right"></span>
 										<header>
-											<h3>I need an Adventure Blog</h3>
+											<h3>Adventure Blog!</h3>
 										</header>
-										<li><a href="/">will hopefully go here</a></li>
+										<li><a href="http://toiletsanddonuts.blogspot.com/">on donut and toilet design.</a></li>
 									</section>
 
 								</div>
