--- a/index.html
+++ b/index.html
@@ -167,34 +167,30 @@
 						<section class="wrapper style1 container special">
 							<div class="row">
 								<div class="4u 12u(narrower)">
-
 									<section>
 										<header>
 											<li><a href="http://sardinesandcappuccinos.blogspot.com/"><span class="icon featured fa-chevron-left"></span><h3>Poetry Blog</h3></a></li>
 										</header>
-										<h5>An eclectic colleciton under an assumed name</h5>
+										<h6>An eclectic colleciton under an assumed name</h6>
 									</section>
 
 								</div>
 								<div class="4u 12u(narrower)">
 
 									<section>
-										<span class="icon featured fa-chevron-up"></span>
 										<header>
-											<h3>Want to laugh?</h3>
+											<li><a href="http://oaurn.blogspot.com/"><span class="icon featured fa-chevron-up"></span><h3>Want to laugh?</h3></a></li>
 										</header>
 										<li><a href="http://oaurn.blogspot.com/">so click here</a></li>
 									</section>
 
 								</div>
 								<div class="4u 12u(narrower)">
-
 									<section>
-										<span class="icon featured fa-chevron-right"></span>
 										<header>
-											<h3>Adventure Blog!</h3>
+											<li><a href="http://toiletsanddonuts.blogspot.com/"><span class="icon featured fa-chevron-right"></span><h3>Adventure Blog!</h3></a></li>
 										</header>
-										<li><a href="http://toiletsanddonuts.blogspot.com/">on donut and toilet design.</a></li>
+										on donut and toilet design.
 									</section>
 
 								</div>
