--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 										<header>
 											<li><a href="http://sardinesandcappuccinos.blogspot.com/"><span class="icon featured fa-chevron-left"></span><h3>Poetry Blog</h3></a></li>
 										</header>
-										<h6>An eclectic colleciton under an assumed name</h6>
+										An eclectic colleciton under an assumed name
 									</section>
 
 								</div>
