--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
 							<input type="button" value="Random Project" onClick="randomlinks2()">
 						</form>
 						<form>
-							<input type="special button" value="Picked Out Just For You Project" onClick="randomlinks2()">
+							<input type="button" value="Picked Out Just For You Project" onClick="randomlinks2()">
 						</form>
 						
 						<!--	<li><a href="#" class="button">Picked Out Just For <strong>You</strong> Project</a></li> -->
