--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 										<header>
 											<li><a href="http://sardinesandcappuccinos.blogspot.com/"><span class="icon featured fa-chevron-left"></span><h3>Poetry Blog</h3></a></li>
 										</header>
-										An eclectic colleciton under an assumed name
+										an eclectic colleciton under an assumed name
 									</section>
 
 								</div>
@@ -190,7 +190,7 @@
 										<header>
 											<li><a href="http://toiletsanddonuts.blogspot.com/"><span class="icon featured fa-chevron-right"></span><h3>Adventure Blog!</h3></a></li>
 										</header>
-										on donut and toilet design.
+										on donut and toilet design
 									</section>
 
 								</div>
