--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 
 							<header class="major">
 								<h2><strong>Featured Content</strong>
-								<p>Photographs</p></h2>
+								<p>Photographs <strong>Yosemite</strong></p></h2>
 							</header>
 
 							<div class="row">
