--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
 		<title>Miranda Shugars</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta http-equiv="imagetoolbar" content="no" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+		<link rel="stylesheet" href="fancybox/fancybox/jquery.fancybox-1.3.4.css" type="text/css" media="screen" />
+
 	</head>
 	<body class="index">
 		<div id="page-wrapper">
@@ -99,36 +102,8 @@
 
 			<!-- Main -->
 				<article id="main">
-				
-				<!--	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>-->
-						<script type="text/javascript" src="fancybox/fancybox/jquery.fancybox-1.3.4.pack.js"></script>
-						<link rel="stylesheet" href="fancybox/fancybox/jquery.fancybox-1.3.4.css" type="text/css" media="screen" />
-					<!--	<link rel="stylesheet" href="fancybox/style.css" />-->
-					
-	<script>
-		$(document).ready(function() {
-			/*
-			*   Examples - images
-			*/
-			$("a#1").fancybox();
-			$("a#2").fancybox({
-				'overlayShow'	: false,
-				'transitionIn'	: 'elastic',
-				'transitionOut'	: 'elastic'
-			});
-			$("a#3").fancybox({
-				'transitionIn'	: 'none',
-				'transitionOut'	: 'none'	
-			});
-			$("a#4").fancybox({
-				'opacity'		: true,
-				'overlayShow'	: false,
-				'transitionIn'	: 'elastic',
-				'transitionOut'	: 'none'
-			});
-		});
-	</script>
-				<a id="1" href="projects/images/2/plan.jpg"><img alt="example1" src="projects/images/2/plan_sm.jpg" /></a>
+
+				<a id="1" href="projects/images/2/plan.jpg"><img alt="1" src="projects/images/2/plan_sm.jpg" /></a>
 
 					<header class="special container">
 						<span class="icon fa-barcode"></span>
@@ -231,8 +206,8 @@
 						<section class="wrapper style3 container special">
 
 							<header class="major">
-								<h2><strong>Featured Content</strong>
-								<p>Photographs <strong>Yosemite</strong></p></h2>
+								<h5><strong>Featured Content</strong></h5>
+								<h2><p>Photographs <strong>Yosemite</strong></p></h2>
 							</header>
 
 							<div class="row">
@@ -360,6 +335,55 @@
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
+			<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
+				<script>
+					!window.jQuery && document.write('<script src="jquery-1.4.3.min.js"><\/script>');
+				</script>
+			<script src="fancybox/fancybox/jquery.fancybox-1.3.4.pack.js"></script>
+			<!--	<link rel="stylesheet" href="fancybox/style.css" />-->
+
+		
+	<script>
+		$(document).ready(function() {
+			/*
+			*   Examples - images
+			*/
+			$("a#1").fancybox();
+			$("a#2").fancybox({
+				'overlayShow'	: false,
+				'transitionIn'	: 'elastic',
+				'transitionOut'	: 'elastic'
+			});
+			$("a#3").fancybox({
+				'transitionIn'	: 'none',
+				'transitionOut'	: 'none'	
+			});
+			$("a#4").fancybox({
+				'opacity'		: true,
+				'overlayShow'	: false,
+				'transitionIn'	: 'elastic',
+				'transitionOut'	: 'none'
+			});
+			$("a#6").fancybox({
+				'titlePosition'		: 'outside',
+				'overlayColor'		: '#000',
+				'overlayOpacity'	: 0.9
+			});
+			$("a#7").fancybox({
+				'titlePosition'	: 'inside'
+			});
+			$("a#8").fancybox({
+				'titlePosition'	: 'over'
+			});
+			$("a[rel=example_group]").fancybox({
+				'transitionIn'		: 'none',
+				'transitionOut'		: 'none',
+				'titlePosition' 	: 'over',
+				'titleFormat'		: function(title, currentArray, currentIndex, currentOpts) {
+					return '<span id="fancybox-title-over">Image ' + (currentIndex + 1) + ' / ' + currentArray.length + (title.length ? ' &nbsp; ' + title : '') + '</span>';
+				}
+		});
+	</script>
 
 	</body>
 </html>
