--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 			<!-- Main -->
 				<article id="main">
 
-				<a id="1" href="projects/images/2/plan_sm.jpg"><img alt="1" src="projects/images/2/plan_sm.jpg" /></a>
+				<a id="1" href="projects/images/2/plan_sm.jpg" class="image featured"><img alt="1" src="projects/images/2/plan_sm.jpg" /></a>
 
 					<header class="special container">
 						<span class="icon fa-barcode"></span>
