--- a/index.html
+++ b/index.html
@@ -103,8 +103,6 @@
 			<!-- Main -->
 				<article id="main">
 
-				<a id="1" href="projects/images/2/plan_sm.jpg" class="image featured"><img alt="1" src="projects/images/2/plan_sm.jpg" /></a>
-
 					<header class="special container">
 						<span class="icon fa-barcode"></span>
 						<h2> This is the idea: the website, permanently <strong>under construction</strong> , will only gradually accumulate the requisite expansiveness.</h2>
@@ -215,7 +213,8 @@
 								<div class="6u 12u(narrower)">
 
 									<section>
-										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+										<a id="1" href="images/pic01.jpg" class="image featured"><img alt="1" src="images/pic01.jpg" /></a>
+										<!--<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>-->
 										<header>
 											<h3>A Really Fast Train</h3>
 										</header>
