--- a/index.html
+++ b/index.html
@@ -214,7 +214,6 @@
 
 									<section>
 										<a id="1" href="images/pic01.jpg" class="image featured"><img alt="1" src="images/pic01.jpg" /></a>
-										<!--<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>-->
 										<header>
 											<h3>A Really Fast Train</h3>
 										</header>
@@ -225,8 +224,7 @@
 								<div class="6u 12u(narrower)">
 
 									<section>
-										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-										<header>
+										<a id="1" href="images/pic02.jpg" class="image featured"><img alt="1" src="images/pic02.jpg" /></a>										<header>
 											<h3>An Airport Terminal</h3>
 										</header>
 										<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
@@ -238,8 +236,7 @@
 								<div class="6u 12u(narrower)">
 
 									<section>
-										<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-										<header>
+										<a id="1" href="images/pic03.jpg" class="image featured"><img alt="1" src="images/pic03.jpg" /></a>										<header>
 											<h3>Hyperspace Travel</h3>
 										</header>
 										<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
@@ -249,7 +246,7 @@
 								<div class="6u 12u(narrower)">
 
 									<section>
-										<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
+										<a id="1" href="images/pic04.jpg" class="image featured"><img alt="1" src="images/pic04.jpg" /></a>
 										<header>
 											<h3>And Another Train</h3>
 										</header>
