--- a/index.html
+++ b/index.html
@@ -215,9 +215,9 @@
 									<section>
 										<a id="1" href="images/pic01.jpg" class="image featured"><img alt="1" src="images/pic01.jpg" /></a>
 										<header>
-											<h3>A Really Fast Train</h3>
+											<h3>A Waterfall That</h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
+										<p>blows away as quickly as it falls, reaching us as mist.</p>
 									</section>
 
 								</div>
@@ -225,9 +225,9 @@
 
 									<section>
 										<a id="1" href="images/pic02.jpg" class="image featured"><img alt="1" src="images/pic02.jpg" /></a>										<header>
-											<h3>An Airport Terminal</h3>
+											<h3>Yosemite Valley,</h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
+										<p>foothills to the Sierra range.</p>
 									</section>
 
 								</div>
@@ -237,9 +237,9 @@
 
 									<section>
 										<a id="1" href="images/pic03.jpg" class="image featured"><img alt="1" src="images/pic03.jpg" /></a>										<header>
-											<h3>Hyperspace Travel</h3>
+											<h3>A Mountain Lake Where</h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
+										<p>we stole a half hour with tiny silver minnows and fractured cloud reflections.</p>
 									</section>
 
 								</div>
@@ -248,9 +248,9 @@
 									<section>
 										<a id="1" href="images/pic04.jpg" class="image featured"><img alt="1" src="images/pic04.jpg" /></a>
 										<header>
-											<h3>And Another Train</h3>
+											<h3>On a Hot Day</h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
+										<p>in Berkeley's Botanical Gardens, looking at our hands, surrounded by bamboo.</p>
 									</section>
 
 								</div>
