--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 								<div class="6u 12u(narrower)">
 
 									<section>
-										<a id="1" href="images/pic02.jpg" class="image featured"><img alt="1" src="images/pic02.jpg" /></a>										<header>
+										<a id="3" href="images/pic02.jpg" class="image featured"><img alt="3" src="images/pic02.jpg" /></a>										<header>
 											<h3>Yosemite Valley,</h3>
 										</header>
 										<p>foothills to the Sierra range.</p>
@@ -236,7 +236,7 @@
 								<div class="6u 12u(narrower)">
 
 									<section>
-										<a id="1" href="images/pic03.jpg" class="image featured"><img alt="1" src="images/pic03.jpg" /></a>										<header>
+										<a id="7" href="images/pic03.jpg" class="image featured"><img alt="7" src="images/pic03.jpg" /></a>										<header>
 											<h3>A Mountain Lake Where</h3>
 										</header>
 										<p>we stole a half hour with tiny silver minnows and fractured cloud reflections.</p>
@@ -246,7 +246,7 @@
 								<div class="6u 12u(narrower)">
 
 									<section>
-										<a id="1" href="images/pic04.jpg" class="image featured"><img alt="1" src="images/pic04.jpg" /></a>
+										<a id="8" href="images/pic04.jpg" class="image featured"><img alt="8" src="images/pic04.jpg" /></a>
 										<header>
 											<h3>On a Hot Day</h3>
 										</header>
@@ -350,10 +350,7 @@
 				'transitionIn'	: 'elastic',
 				'transitionOut'	: 'elastic'
 			});
-			$("a#3").fancybox({
-				'transitionIn'	: 'none',
-				'transitionOut'	: 'none'	
-			});
+			$("a#3").fancybox();
 			$("a#4").fancybox({
 				'opacity'		: true,
 				'overlayShow'	: false,
