--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 								<div class="6u 12u(narrower)">
 
 									<section>
-										<a id="7" href="images/pic03.jpg" class="image featured"><img alt="7" src="images/pic03.jpg" /></a>										<header>
+										<a id="7" href="images/pic02.jpg" class="image featured" title="silversinnowssilverminnowssilverminnowssilversinnowssilverminnowssilverminnowssilversinnowssilverminnowssilverminnowssilversinnowssilverminnowssilverminnows"><img alt="7" src="images/pic03.jpg" /></a>										<header>
 											<h3>A Mountain Lake Where</h3>
 										</header>
 										<p>we stole a half hour with tiny silver minnows and fractured cloud reflections.</p>
