--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 						<br />
 						a work in progress.
 						<br />
-						by <a href="#">Miranda Shugars</a>.</p>
+						by <a href="bio.html">Miranda Shugars</a>.</p>
 						<footer>
 							<ul class="buttons vertical">
 								<li><a href="#main" class="button fit scrolly">Tell Me More</a></li>
