--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 								<a href="#">Projects</a>
 								<ul>
 									<li class="submenu">
-										<a href="#">Side Projects<span class="icon fa-cubes"><span class="label">Feature</a>
+										<a href="#">Side Projects <span class="icon fa-cubes"><span class="label">Feature</a>
 										<ul>
 											<li><a href="no-sidebar.html">All Saint's Revamp</a></li>
 											<li><a href="no-sidebar.html">Vicksburg Planning</a></li>
@@ -38,7 +38,7 @@
 										</ul>
 									</li>
 									<li class="submenu">
-										<a href="#">Sans Computer<span class="icon fa-paint-brush"><span class="label">Feature</a>
+										<a href="#">Sans Computer <span class="icon fa-paint-brush"><span class="label">Feature</a>
 										<ul>
 											<li><a href="no-sidebar.html">Portraits</a></li>
 											<li><a href="2.html">Landscapes</a></li>
@@ -47,7 +47,7 @@
 										</ul>
 									</li>
 									<li class="submenu">
-										<a href="#">Photography<span class="icon fa-camera"><span class="label">Feature</a>
+										<a href="#">Photography <span class="icon fa-camera"><span class="label">Feature</a>
 										<ul>
 											<li><a href="pearl.html">Collection1</a></li>
 											<li><a href="no-sidebar.html">Collection2</a></li>
@@ -55,7 +55,7 @@
 										</ul>
 									</li>
 									<li class="submenu">
-										<a href="#">Columbia Projects<span class="icon fa-university"><span class="label">Feature</a>
+										<a href="#">Columbia Projects <span class="icon fa-university"><span class="label">Feature</a>
 										<ul>
 											<li><a href="bank.html">Zombie Bank</a></li>
 											<li><a href="no-sidebar.html">Sublime Gym</a></li>
@@ -66,7 +66,7 @@
 									</li>
 								</ul>
 							</li>
-							<li><a href="bio.html" class="button">About Myself</a></li>
+							<li><a href="bio.html" class="button special">About Myself</a></li>
 						</ul>
 					</nav>
 				</header>
