--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 									</li>
 								</ul>
 							</li>
-							<li><a href="bio.html" class="button special">About Myself</a></li>
+							<li><a href="#" class="button">About Myself</a></li>
 						</ul>
 					</nav>
 				</header>
