--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title>Miranda Shugars</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta http-equiv="imagetoolbar" content="no" />
+		<!--<meta http-equiv="imagetoolbar" content="no" />-->
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
