--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 		<title>Miranda Shugars</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--<meta http-equiv="imagetoolbar" content="no" />-->
+		<!--MIGHT BE NECESSARY FOR FANCYBOX<meta http-equiv="imagetoolbar" content="no" />-->
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-		<link rel="stylesheet" href="fancybox/fancybox/jquery.fancybox-1.3.4.css" type="text/css" media="screen" />
+		<!--<link rel="stylesheet" href="fancybox/fancybox/jquery.fancybox-1.3.4.css" type="text/css" media="screen" />-->
 
 	</head>
 	<body class="index">
@@ -22,7 +22,7 @@
 
 			<!-- Header -->
 				<header id="header" class="alt">
-					<h1 id="logo"><a href="index.html">Portfolio <span>Shugars, 2016</span></a></h1>
+					<h1 id="logo"><a href="index.html">Portfolio <span>Shugars, 2015</span></a></h1>
 					<nav id="nav">
 						<ul>
 							<li class="current"><a href="index.html">Welcome</a></li>
