--- a/index.html
+++ b/index.html
@@ -332,9 +332,9 @@
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
 			<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
-				<script>
+			<!--	<script>
 					!window.jQuery && document.write('<script src="jquery-1.4.3.min.js"><\/script>');
-				</script>
+				</script>-->
 			<script src="fancybox/fancybox/jquery.fancybox-1.3.4.pack.js"></script>
 			<!--	<link rel="stylesheet" href="fancybox/style.css" />-->
 
