--- a/index.html
+++ b/index.html
@@ -331,10 +331,11 @@
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
-			<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
+			<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
 				<script>
 					!window.jQuery && document.write('<script src="jquery-1.4.3.min.js"><\/script>');
-				</script>-->
+					return false;
+				</script>
 			<script src="fancybox/fancybox/jquery.fancybox-1.3.4.pack.js"></script>
 			<!--	<link rel="stylesheet" href="fancybox/style.css" />-->
 
@@ -376,6 +377,7 @@
 					return '<span id="fancybox-title-over">Image ' + (currentIndex + 1) + ' / ' + currentArray.length + (title.length ? ' &nbsp; ' + title : '') + '</span>';
 				}
 			});
+			return false;
 		});
 	</script>
 
