--- a/index.html
+++ b/index.html
@@ -32,24 +32,24 @@
 									<li class="submenu">
 										<a href="#">Side Projects <span class="icon fa-cubes"><span class="label">Feature</a>
 										<ul>
-											<li><a href="no-sidebar.html">All Saint's Revamp</a></li>
-											<li><a href="no-sidebar.html">Vicksburg Planning</a></li>
-											<li><a href="no-sidebar.html">Aesthetic Thoughts</a></li>
+											<li><a href="side/allsaints.html">All Saint's Revamp</a></li>
+											<li><a href="side/planning.html">Vicksburg Planning</a></li>
+											<li><a href="side/aesthit.html">Aesthetic Thoughts</a></li>
 										</ul>
 									</li>
 									<li class="submenu">
 										<a href="#">Sans Computer <span class="icon fa-paint-brush"><span class="label">Feature</a>
 										<ul>
-											<li><a href="no-sidebar.html">Portraits</a></li>
-											<li><a href="2.html">Landscapes</a></li>
-											<li><a href="no-sidebar.html">Abstract/ Misc</a></li>
-											<li><a href="no-sidebar.html">Thinking Thoughts</a></li>
+											<li><a href="sans/faces.html">Portraits</a></li>
+											<li><a href="sans/lands.html">Landscapes</a></li>
+											<li><a href="sans/misc.html">Abstract/ Misc</a></li>
+											<li><a href="sans/think.html">Thinking Thoughts</a></li>
 										</ul>
 									</li>
 									<li class="submenu">
 										<a href="#">Photography <span class="icon fa-camera"><span class="label">Feature</a>
 										<ul>
-											<li><a href="pearl.html">Collection1</a></li>
+											<li><a href="photo/pearl.html">Collection1</a></li>
 											<li><a href="no-sidebar.html">Collection2</a></li>
 											<li><a href="no-sidebar.html">Collection3</a></li>
 										</ul>
@@ -57,11 +57,11 @@
 									<li class="submenu">
 										<a href="#">Columbia Projects <span class="icon fa-university"><span class="label">Feature</a>
 										<ul>
-											<li><a href="bank.html">Zombie Bank</a></li>
-											<li><a href="no-sidebar.html">Sublime Gym</a></li>
-											<li><a href="no-sidebar.html">Pipe Bathroom</a></li>
-											<li><a href="no-sidebar.html">Artichoke Age</a></li>
-											<li><a href="no-sidebar.html">Thoughts on Architecture</a></li>
+											<li><a href="columbia/bank.html">Zombie Bank</a></li>
+											<li><a href="columbia/gym.html">Sublime Gym</a></li>
+											<li><a href="columbia/bath.html">Pipe Bathroom</a></li>
+											<li><a href="columbia/choke.html">Artichoke Age</a></li>
+											<li><a href="columbia/think.html">Thoughts on Architecture</a></li>
 										</ul>
 									</li>
 								</ul>
