--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
-			<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
+			<script src="https://code.jquery.com/jquery-latest.min.js"></script>
 				<script>
 					!window.jQuery && document.write('<script src="jquery-1.4.3.min.js"><\/script>');
 				</script>
