--- a/columbia/bank.html
+++ b/columbia/bank.html
@@ -19,52 +19,51 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="index.html">Portfolio <span>by Miranda Shugars</span></a></h1>
+					<h1 id="logo"><a href="https://mshugars.github.io/index.html">Portfolio <span>by Miranda Shugars</span></a></h1>
 					<nav id="nav">
 						<ul>
-							<li class="current"><a href="index.html">Welcome</a></li>
-							<li class="submenu">
-									<a href="#">Projects</a>
-								<ul>
-									<li><a href="contact.html">Contact</a></li>
-									<li class="submenu">
-										<a href="#">Side Projects<span class="icon fa-cubes"><span class="label">Feature</a>
-										<ul>
-											<li><a href="no-sidebar.html">All Saint's Revamp</a></li>
-											<li><a href="no-sidebar.html">Vicksburg Planning</a></li>
-											<li><a href="no-sidebar.html">Aesthetic Thoughts</a></li>
-										</ul>
-									</li>
-									<li class="submenu">
-										<a href="#">Sans Computer<span class="icon fa-paint-brush"><span class="label">Feature</a>
-										<ul>
-											<li><a href="no-sidebar.html">Portraits</a></li>
-											<li><a href="2.html">Landscapes</a></li>
-											<li><a href="no-sidebar.html">Abstract/ Misc</a></li>
-											<li><a href="no-sidebar.html">Thinking Thoughts</a></li>
-										</ul>
-									</li>
-									<li class="submenu">
-										<a href="#">Photography<span class="icon fa-camera"><span class="label">Feature</a>
-										<ul>
-											<li><a href="no-sidebar.html">Collection1</a></li>
-											<li><a href="no-sidebar.html">Collection2</a></li>
-											<li><a href="no-sidebar.html">Collection3</a></li>
-										</ul>
-									</li>
-									<li class="submenu">
-										<a href="#">Columbia Projects<span class="icon fa-university"><span class="label">Feature</a>
-										<ul>
-											<li><a href="1.html">Zombie Bank</a></li>
-											<li><a href="no-sidebar.html">Sublime Gym</a></li>
-											<li><a href="no-sidebar.html">Pipe Bathroom</a></li>
-											<li><a href="no-sidebar.html">Artichoke Age</a></li>
-											<li><a href="no-sidebar.html">Thoughts on Architecture</a></li>
-										</ul>
-									</li>
-								</ul>
+						<li class="current"><a href="https://mshugars.github.io/index.html">Welcome</a></li>
+						<li class="submenu">
+							<a href="#">Projects</a>
+							<ul>
+								<li class="submenu">
+									<a href="#">Side Projects <span class="icon fa-cubes"><span class="label">Feature</a>
+									<ul>
+										<li><a href="side/allsaints.html">All Saint's Revamp</a></li>
+										<li><a href="side/planning.html">Vicksburg Planning</a></li>
+										<li><a href="side/aesthit.html">Aesthetic Thoughts</a></li>
+									</ul>
+								</li>
+								<li class="submenu">
+									<a href="#">Sans Computer <span class="icon fa-paint-brush"><span class="label">Feature</a>
+									<ul>
+										<li><a href="sans/faces.html">Portraits</a></li>
+										<li><a href="sans/lands.html">Landscapes</a></li>
+										<li><a href="sans/misc.html">Abstract/ Misc</a></li>
+										<li><a href="sans/think.html">Thinking Thoughts</a></li>
+									</ul>
+								</li>
+								<li class="submenu">
+									<a href="#">Photography <span class="icon fa-camera"><span class="label">Feature</a>
+									<ul>
+										<li><a href="photo/pearl.html">Collection1</a></li>
+										<li><a href="no-sidebar.html">Collection2</a></li>
+										<li><a href="no-sidebar.html">Collection3</a></li>
+									</ul>
+								</li>
+								<li class="submenu">
+									<a href="#">Columbia Projects <span class="icon fa-university"><span class="label">Feature</a>
+									<ul>
+										<li><a href="bank.html">Zombie Bank</a></li>
+										<li><a href="gym.html">Sublime Gym</a></li>
+										<li><a href="bath.html">Pipe Bathroom</a></li>
+										<li><a href="choke.html">Artichoke Age</a></li>
+										<li><a href="think.html">Thoughts on Architecture</a></li>
+									</ul>
+								</li>
+							</ul>
 							</li>
-							<li><a href="#" class="button special">Sign Up</a></li>
+							<li><a href="https://mshugars.github.io/bio.html" class="button">About Myself</a></li>
 						</ul>
 					</nav>
 				</header>
@@ -75,6 +74,7 @@
 					<header class="special container">
 						<span class="icon fa-spinner"></span>
 						<h2><strong>Human Bank </strong>Long Island City, NY</h2>
+						<a href="" class="image fit"><img src="1/1.png" alt="" /></a>
 						<p>An exploration of post-apocalyptic architectural solutions</p>
 						<p>in the ruins of a 21st century financial institution.</p>
 					</header>
@@ -88,15 +88,15 @@
 									<!-- Content -->
 										<div class="content">
 											<section>
-												<a href="projects/images/1/renderhippies.jpg" class="image fit"><img src="projects/images/1/renderhippies_sm.jpg" alt="" />Interior Render (Post)</a>
+												<a href="1/renderhippies.jpg" class="image fit"><img src="1/renderhippies_sm.jpg" alt="" />Interior Render (Post)</a>
 												<header>
 													<h3><p>Spring 2015, Columbia University, Erica Goetz</p></h3>
 												</header>
 												<p>For this project I was asked to design a bank that would look toward the future of banking. I decided to examine the role of architecture as allegory, by creating a narrative through my building that describes the apocalyptic downfall of a corrupt banking industry, and the subsequent re-birth of a new kind of value system. Below is an excerpt from the statement I presented with my images.</p>
 												<blockquote><p>Since the advent of the bank, a secure and opaque house of valuables, money has become increasingly symbolic. You don’t see piles of money in most people’s houses, but you see their possessions, their grooming, the way they carry themselves, and you understand that in a bank somewhere they have a corresponding numeric value. Money, those numbers in servers, is no less central to the way we define ourselves and each other. We have bred a consumer culture in which the value of human life is determined by a series of bits and bytes, often abstracted from their meaning as commodity value. We hoard these numbers in banks, and securely build our image on the basis of an idea of wealth.</p>
 												<p>In the allegory of my Human Bank, a building that represents our monetary culture is built, experiences a period of moderate success, and then falls to a zombie apocalypse. Zombies are, after all, the ultimate self-destructive consumers. In light of this new threat, surviving humans take refuge in the bank— now human bank, now devoid of monetary responsibility. The bank’s advertised business becomes its real function: protecting people’s livelihood.</p></blockquote>
-												<script src="https://embed.github.com/view/3d/mshugars/mshugars.github.io/master/projects/bank.stl?height=300&width=500">3D Visualization</script>
-												<a href="projects/images/1/facade strategy.jpg" class="image fit"><img src="projects/images/1/facade strategy_sm.jpg" alt="" />Facade Strategy</a>
+												<script src="https://embed.github.com/view/3d/mshugars/mshugars.github.io/master/columbia/1/bank.stl?height=300&width=500">3D Visualization</script>
+												<a href="1/facade strategy.jpg" class="image fit"><img src="1/facade strategy_sm.jpg" alt="" />Facade Strategy</a>
 											</section>
 										</div>
 
@@ -118,14 +118,14 @@
 											</section>
 
 											<section>
-												<a href="projects/images/1/conceptsketch.jpg" class="image featured"><img src="projects/images/1/conceptsketch_sm.jpg" alt="" />Concept Sketch</a>
+												<a href="1/conceptsketch.jpg" class="image featured"><img src="1/conceptsketch_sm.jpg" alt="" />Concept Sketch</a>
 												<!--<h4><p>Concept Sketch</p></h4>-->
-												<a href="projects/images/1/sectionNOZOMBIES2.jpg" class="image featured"><img src="projects/images/1/sectionNOZOMBIES2_sm.jpg" alt="" />In Site</a>
+												<a href="1/sectionNOZOMBIES2.jpg" class="image featured"><img src="1/sectionNOZOMBIES2_sm.jpg" alt="" />In Site</a>
 												<header>
 													<h3>Amet Lorem Tempus</h3>
 												</header>
 												<sub><p>Sed trisdo suscipit ullamcorper sed blandit lorem ipsum dolore.</p></sub>
-												<a href="projects/images/1/zombiesite strategies.jpg" class="image featured"><img src="projects/images/1/zombiesite strategies_sm.jpg" alt="" />Site Strategies</a>
+												<a href="1/zombiesite strategies.jpg" class="image featured"><img src="1/zombiesite strategies_sm.jpg" alt="" />Site Strategies</a>
 												<footer>
 													<ul class="buttons">
 														<li><a href="#" class="button small">Click Here 4 Zombies</a></li>
