--- a/columbia/bank.html
+++ b/columbia/bank.html
@@ -74,7 +74,7 @@
 					<header class="special container">
 						<span class="icon fa-spinner"></span>
 						<h2><strong>Human Bank </strong>Long Island City, NY</h2>
-						<a href="" class="image fit"><img src="1/1.png" alt="" height="72" width="72" /></a>
+						<a href="" class="image featured"><img src="1/1.png" alt="" height="72" width="72" /></a>
 						<p>An exploration of post-apocalyptic architectural solutions</p>
 						<p>in the ruins of a 21st century financial institution.</p>
 					</header>
