--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
 
 		<!-- Scripts -->
 		
-			<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11/jquery.min.js"></script>
+			<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11/jquery.min.js"></script>
 				<script>
 					!window.jQuery && document.write('<script src="jquery-1.4.3.min.js"><\/script>');
 				</script>
