--- a/index.html
+++ b/index.html
@@ -324,13 +324,7 @@
 
 		<!-- Scripts -->
 		
-			<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11/jquery.min.js"></script>
-				<script>
-					!window.jQuery && document.write('<script src="jquery-1.4.3.min.js"><\/script>');
-				</script>
-			<script src="fancybox/fancybox/jquery.fancybox-1.3.4.pack.js"></script>
-			<!--	<link rel="stylesheet" href="fancybox/style.css" />-->
-			
+		
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.dropotron.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
@@ -339,7 +333,13 @@
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
-		
+			<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11/jquery.min.js"></script>-->
+				<script>
+					!window.jQuery && document.write('<script src="jquery-1.4.3.min.js"><\/script>');
+				</script>
+			<script src="fancybox/fancybox/jquery.fancybox-1.3.4.pack.js"></script>
+			<!--	<link rel="stylesheet" href="fancybox/style.css" />-->
+			
 	<script>
 		$(document).ready(function() {
 			/*
