--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 								<div class="6u 12u(narrower)">
 
 									<section>
-										<a class="fancybox" href="images/pic01.jpg" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+										<a class="fancybox image featured" href="images/pic01.jpg"><img src="images/pic01.jpg" alt="" /></a>
 										<header>
 											<h3>A Waterfall That</h3>
 										</header>
