--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 								<div class="6u 12u(narrower)">
 
 									<section>
-										<a id="3" href="images/pic02.jpg" class="image featured"><img alt="3" src="images/pic02.jpg" /></a>										<header>
+										<a href="images/pic02.jpg" class="fancybox image featured"><img alt="" src="images/pic02.jpg" /></a>										<header>
 											<h3>Yosemite Valley,</h3>
 										</header>
 										<p>foothills to the Sierra range.</p>
@@ -235,7 +235,7 @@
 								<div class="6u 12u(narrower)">
 
 									<section>
-										<a id="7" href="images/pic02.jpg" class="image featured" title="silversinnowssilverminnowssilverminnowssilversinnowssilverminnowssil<br>verminnowssilversinnowssilverminnowssilverminnowssilversinnowssilverminnowssilver</br>"><img alt="7" src="images/pic03.jpg" /></a>										<header>
+										<a href="images/pic02.jpg" class="fancybox image featured" title="silversinnowssilverminnowssilverminnowssilversinnowssilverminnowssil<br>verminnowssilversinnowssilverminnowssilverminnowssilversinnowssilverminnowssilver</br>"><img alt="" src="images/pic03.jpg" /></a>										<header>
 											<h3>A Mountain Lake Where</h3>
 										</header>
 										<p>we stole a half hour with tiny silver minnows and fractured cloud reflections.</p>
@@ -245,7 +245,7 @@
 								<div class="6u 12u(narrower)">
 
 									<section>
-										<a id="8" href="images/pic04.jpg" class="image featured"><img alt="8" src="images/pic04.jpg" /></a>
+										<a href="images/pic04.jpg" class="fancybox image featured"><img alt="" src="images/pic04.jpg" /></a>
 										<header>
 											<h3>On a Hot Day</h3>
 										</header>
