--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
-			<script type="text/javascript" src="fancybox/lib/jquery-1.10.1.min.js"></script>
+			<!--<script type="text/javascript" src="fancybox/lib/jquery-1.10.1.min.js"></script>-->
 			<script type="text/javascript" src="fancybox/source/jquery.fancybox.js?v=2.1.5"></script>
 			<!--	<script>
 					!window.jQuery && document.write('<script src="jquery-1.4.3.min.js"><\/script>');
