--- a/columbia/bank.html
+++ b/columbia/bank.html
@@ -14,7 +14,7 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 	</head>
-	<body class="right-sidebar">
+	<body class="right-sidebar" background="1/plans.jpg">
 		<div id="page-wrapper">
 
 			<!-- Header -->
@@ -72,9 +72,8 @@
 				<article id="main">
 
 					<header class="special container">
-						<span class="icon fa-spinner"></span>
+						<img src="1/1.png" alt="" height="72" width="72" /> <!--span class="icon fa-spinner"></span-->
 						<h2><strong>Human Bank </strong>Long Island City, NY</h2>
-						<img src="1/1.png" alt="" height="72" width="72" />
 						<p>An exploration of post-apocalyptic architectural solutions</p>
 						<p>in the ruins of a 21st century financial institution.</p>
 					</header>
