--- a/columbia/bank.html
+++ b/columbia/bank.html
@@ -15,6 +15,7 @@
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 	</head>
 	<body class="right-sidebar" background="1/plans.jpg">
+	<body style="background-image:url(1/plans.jpg)">
 		<div id="page-wrapper">
 
 			<!-- Header -->
