--- a/columbia/bank.html
+++ b/columbia/bank.html
@@ -14,7 +14,15 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 	</head>
-	<body class="right-sidebar" background="1/plans.jpg">
+	<body class="right-sidebar">
+	<style> 
+		body {
+			 background: url("1/plans.jpg");
+			 background-size: 1553px 840px;
+			 background-repeat: no-repeat;
+			 padding-top: 40px;
+		}
+	</style>
 	<body style="background-image:url(1/plans.jpg)">
 		<div id="page-wrapper">
 
