--- a/columbia/bank.html
+++ b/columbia/bank.html
@@ -15,12 +15,14 @@
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 	</head>
 	<body class="right-sidebar">
+	<a href="1/plans.jpg" id="plans"></a>
 	<style> 
-		body {
+		#plans {
 			 background: url("1/plans.jpg");
-			 background-size: 1553px 840px;
-			 background-repeat: no-repeat;
-			 padding-top: 40px;
+			 display: block;
+			 background-size: 775px 420px;
+			 background-repeat: repeat;
+			 padding-top: 800px;
 		}
 	</style>
 	<body style="background-image:url(1/plans.jpg)">
