--- a/columbia/bank.html
+++ b/columbia/bank.html
@@ -17,7 +17,7 @@
 	<body class="right-sidebar">
 	<a class="plans" href="1/plans.jpg" id="plans"></a>
 	<style> 
-		.plans {
+		body .plans {
 			 background: url("1/plans.jpg");
 			 position: absolute;
     		   	 top: 0;
@@ -30,6 +30,7 @@
 			 background-size: 775px 420px;
 			 background-repeat: repeat;
 			 padding-top: 800px;
+			 opacity: 0.4
 		}
 	</style>
 		<div id="page-wrapper">
