--- a/columbia/bank.html
+++ b/columbia/bank.html
@@ -9,6 +9,7 @@
 	<style> 
 		body .plans {
 			 background: url("1/plans.jpg");
+			 content: '';
 			 position: absolute;
     		   	 top: 0;
 			 left: 0;
@@ -20,8 +21,17 @@
 			 background-size: 775px 420px;
 			 background-repeat: repeat;
 			 padding-top: 800px;
-			 opacity: 0.25
-		}
+			 opacity: 0.15
+			 
+			transition: opacity 0.5s;
+			-webkit-transition: opacity 0.5s;
+			-ms-transition: opacity 0.5s;
+			}
+			
+		.plans:hover {
+			opacity: 0;
+			}
+		
 	</style>
 	
 	<head>
