--- a/columbia/bank.html
+++ b/columbia/bank.html
@@ -5,12 +5,12 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<a class="plans" href="1/plans.jpg" id="plans"></a>
+	<a class="plans" href="mshugars.github.io/columbia/1/plans.jpg" id="plans"></a>
 	<style> 
 		body .plans {
 			border: 0;
 			position: relative;
-			 background: url("1/plans.jpg");
+			 background: url("1/plans_sm.jp2");
 			 content: '';
 			 position: absolute;
     		   	 top: 0;
