--- a/columbia/bank.html
+++ b/columbia/bank.html
@@ -8,7 +8,7 @@
 	<a class="plans" href="mshugars.github.io/columbia/1/plans.jpg" id="plans"></a>
 	<style> 
 		body .plans {
-			 background: url("1/plans_sm.jp2");
+			 background: url("1/plans_med.jpg");
 			 content: '';
 			 position: absolute;
     		   	 top: 0;
