--- a/columbia/bank.html
+++ b/columbia/bank.html
@@ -24,7 +24,7 @@
 			 opacity: 0.15
 			}
 				
-	/*	body .plans:before {	
+		body .plans:before {	
 			transition: opacity 0.5s;
 			-webkit-transition: opacity 0.5s;
 			-ms-transition: opacity 0.5s;
@@ -32,7 +32,7 @@
 			
 		body .plans:before:hover {
 			opacity: 0;
-			}*/
+			}
 		
 	</style>
 	
