--- a/columbia/bank.html
+++ b/columbia/bank.html
@@ -10,7 +10,7 @@
 		body .plans {
 			 background: url("1/plans_med.jpg");
 			 content: '';
-			 position: absolute;
+			 position: relative;
     		   	 top: 0;
 			 left: 0;
     			 bottom: 0;
