--- a/columbia/bank.html
+++ b/columbia/bank.html
@@ -10,7 +10,7 @@
 		body .plans {
 			 background: url("1/plans_med.jpg");
 			 content: '';
-			 position: relative;
+			 position: absolute;
     		   	 top: 0;
 			 left: 0;
     			 bottom: 0;
@@ -23,7 +23,7 @@
 			 opacity: 0.15
 			}
 				
-		body .plans:before {	
+	/*	body .plans:before {	
 			transition: opacity 0.5s;
 			-webkit-transition: opacity 0.5s;
 			-ms-transition: opacity 0.5s;
@@ -31,7 +31,7 @@
 			
 		body .plans:before:hover {
 			opacity: 0;
-			}
+			}*/
 		
 	</style>
 	
