--- a/columbia/bank.html
+++ b/columbia/bank.html
@@ -15,8 +15,8 @@
 			 left: 0;
     			 bottom: 0;
     			 right: 0;
-    			 z-index: -1;
-			 display: block;
+    			/* z-index: -1;  
+			 display: block;*/
 			 background-size: 775px 420px;
 			 background-repeat: repeat;
 			 opacity: 0.15
