--- a/columbia/bank.html
+++ b/columbia/bank.html
@@ -9,14 +9,14 @@
 	<style> 
 		body .plans {
 			 background: url("1/plans_med.jpg");
-			 content: '';
+			 /*content: '';*/
 			 position: absolute;
     		   	 top: 0;
 			 left: 0;
     			 bottom: 0;
     			 right: 0;
-    			/* z-index: -1;  
-			 display: block;*/
+    			 z-index: -1;  
+			 display: block;
 			 background-size: 775px 420px;
 			 background-repeat: repeat;
 			 opacity: 0.15
