--- a/columbia/bank.html
+++ b/columbia/bank.html
@@ -7,7 +7,7 @@
 <html>
 	<a class="plans" href="mshugars.github.io/columbia/1/plans.jpg" id="plans"></a>
 	<style> 
-		body .plans {
+		body #plans {
 			 background: url("1/plans_med.jpg");
 			 /*content: '';*/
 			 position: absolute;
