--- a/columbia/bank.html
+++ b/columbia/bank.html
@@ -9,6 +9,7 @@
 	<style> 
 		body #plans {
 			 background: url("1/plans_med.jpg");
+			 height: 100%;
 			 /*content: '';*/
 			 position: absolute;
     		   	 top: 0;
