--- a/columbia/bank.html
+++ b/columbia/bank.html
@@ -10,13 +10,13 @@
 		body #plans {
 			 background: url("1/plans_med.jpg");
 			 height: 100%;
-			 /*content: '';
+			
 			 position: absolute;
     		   	 top: 0;
 			 left: 0;
     			 bottom: 0;
     			 right: 0;
-    			 z-index: -1; */ 
+    			/* z-index: -1; */ 
 			 display: block;
 			 background-size: 775px 420px;
 			 background-repeat: repeat;
