--- a/columbia/bank.html
+++ b/columbia/bank.html
@@ -17,6 +17,7 @@
     			 bottom: 0;
     			 right: 0;
     			/* z-index: -1; */ 
+    			 overflow: hidden;
 			 display: block;
 			 background-size: 775px 420px;
 			 background-repeat: repeat;
