--- a/columbia/bank.html
+++ b/columbia/bank.html
@@ -11,12 +11,12 @@
 			 background: url("1/plans_med.jpg");
 			 height: 100%;
 			
-			 position: absolute;
+			 position: relative;
     		   	 top: 0;
 			 left: 0;
     			 bottom: 0;
     			 right: 0;
-    			/* z-index: -1; */ 
+    			 z-index: -1;
     			 overflow: hidden;
 			 display: block;
 			 background-size: 775px 420px;
