--- a/columbia/bank.html
+++ b/columbia/bank.html
@@ -19,7 +19,7 @@
     			 z-index: -5;
     			 overflow: hidden;
 			 display: block;
-			 background-size: 775px 420px;
+			 background-size: 50em;
 			 background-repeat: repeat;
 			 opacity: 0.15
 			}
