--- a/columbia/bank.html
+++ b/columbia/bank.html
@@ -21,7 +21,7 @@
     			 z-index: -5;
     			 overflow: hidden;
 			 display: block;
-			 background-size: 50em;
+			 /*background-size: 50em;*/
 			 background-repeat: repeat;
 			 opacity: 0.15
 			}
