--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 					<div class="inner">
 
 						<header>
-							<h2>MAZESTUFF</h2>
+							<h2>MAZEbuilding</h2>
 						</header>
 						<p>This is my <strong>Portfolio</strong> website,
 						<br />
