--- a/index.html
+++ b/index.html
@@ -201,7 +201,21 @@
 
 					<!-- Three -->
 						<section class="wrapper style3 container special">
-
+							
+						<script>
+						function randomlinks(){
+						  var myrandom=Math.round(Math.random()*4)
+						    var links=new Array()
+						    links[0]="https://mshugars.github.io/images/minnows/1.jpg"
+						    links[1]="https://mshugars.github.io/images/minnows/2.jpg" 		
+						    links[2]="https://mshugars.github.io/images/minnows/3.jpg"	
+						    links[3]="https://mshugars.github.io/images/minnows/4.jpg"
+						    links[4]="https://mshugars.github.io/images/minnows/5.jpg"
+						    links[5]="https://mshugars.github.io/images/minnows/6.jpg"
+						  window.location=links[myrandom]
+								}
+						</script>
+						
 							<header class="major">
 								<h5><strong>Featured Content</strong></h5>
 								<h2><p>Photographs <strong>Yosemite</strong></p></h2>
