--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
 						<section class="wrapper style3 container special">
 							
 						<script>
-						function randomlinks(){
-						  var myrandom=Math.round(Math.random()*4)
+						function randomlinks3(){
+						  var myrandom=Math.round(Math.random()*6)
 						    var links=new Array()
 						    links[0]="https://mshugars.github.io/images/minnows/1.jpg"
 						    links[1]="https://mshugars.github.io/images/minnows/2.jpg" 		
@@ -249,7 +249,7 @@
 								<div class="6u 12u(narrower)">
 
 									<section>
-										<a href="images/pic02.jpg" class="fancybox image featured" title="silversinnowssilverminnowssilverminnowssilversinnowssilverminnowssil<br>verminnowssilversinnowssilverminnowssilverminnowssilversinnowssilverminnowssilver</br>"><img alt="" src="images/pic03.jpg" /></a>										<header>
+										<a href="images/pic02.jpg" class="fancybox image featured" title="silversinnowssilverminnowssilverminnowssilversinnowssilverminnowssil<br>verminnowssilversinnowssilverminnowssilverminnowssilversinnowssilverminnowssilver</br>"><img alt="" onClick="randomlinks3()" /></a>										<header>
 											<h3>A Mountain Lake Where</h3>
 										</header>
 										<p>we stole a half hour with tiny silver minnows and fractured cloud reflections.</p>
