--- a/index.html
+++ b/index.html
@@ -237,7 +237,8 @@
 								<div class="6u 12u(narrower)">
 
 									<section>
-										<a href="images/pic02.jpg" class="fancybox image featured"><img alt="" src="images/pic02.jpg" /></a>										<header>
+										<a href="images/pic02.jpg" class="fancybox image featured"><img alt="" src="images/pic02.jpg" /></a>									
+										<header>
 											<h3>Yosemite Valley,</h3>
 										</header>
 										<p>foothills to the Sierra range.</p>
@@ -249,7 +250,8 @@
 								<div class="6u 12u(narrower)">
 
 									<section>
-										<a href="images/pic02.jpg" class="fancybox image featured" title="silversinnowssilverminnowssilverminnowssilversinnowssilverminnowssil<br>verminnowssilversinnowssilverminnowssilverminnowssilversinnowssilverminnowssilver</br>"><img alt="" onClick="randomlinks3()" /></a>										<header>
+										<a href="randomlinks3()" class="fancybox image featured" title="silversinnowssilverminnowssilverminnowssilversinnowssilverminnowssil<br>verminnowssilversinnowssilverminnowssilverminnowssilversinnowssilverminnowssilver</br>"><img alt="" src="images/pic03.jpg" /></a>									
+										<header>
 											<h3>A Mountain Lake Where</h3>
 										</header>
 										<p>we stole a half hour with tiny silver minnows and fractured cloud reflections.</p>
