--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 								<div class="6u 12u(narrower)">
 
 									<section>
-										<a href="randomlinks3()" class="fancybox image featured" title="silversinnowssilverminnowssilverminnowssilversinnowssilverminnowssil<br>verminnowssilversinnowssilverminnowssilverminnowssilversinnowssilverminnowssilver</br>"><img alt="" src="images/pic03.jpg" /></a>									
+										<a href="images/pic03.jpg" onclick="return randomlinks3();" class="fancybox image featured" title="silversinnowssilverminnowssilverminnowssilversinnowssilverminnowssil<br>verminnowssilversinnowssilverminnowssilverminnowssilversinnowssilverminnowssilver</br>"><img alt="" src="images/pic03.jpg" /></a>									
 										<header>
 											<h3>A Mountain Lake Where</h3>
 										</header>
