--- a/index.html
+++ b/index.html
@@ -47,9 +47,6 @@
                 <a href="#about" onclick=$("#menu-close").click();>About</a>
             </li>
             <li>
-                <a href="#services" onclick=$("#menu-close").click();>Services</a>
-            </li>
-            <li>
                 <a href="#portfolio" onclick=$("#menu-close").click();>Portfolio</a>
             </li>
             <li>
@@ -61,10 +58,10 @@
     <!-- Header -->
     <header id="top" class="header">
         <div class="text-vertical-center">
-            <h1>Start Bootstrap</h1>
-            <h3>Free Bootstrap Themes &amp; Templates</h3>
+            <h1>Miranda Shugars</h1>
+            <h3>Online Repository</h3>
             <br>
-            <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
+            <!--<a href="#about" class="btn btn-dark btn-lg">Find Out More</a>-->
         </div>
     </header>
 
@@ -83,7 +80,7 @@
     </section>
 
     <!-- Services -->
-    <!-- The circle icons use Font Awesome's stacked icon classes. For more information, visit http://fontawesome.io/examples/ -->
+    <!-- The circle icons use Font Awesome's stacked icon classes. For more information, visit http://fontawesome.io/examples/
     <section id="services" class="services bg-primary">
         <div class="container">
             <div class="row text-center">
@@ -144,28 +141,28 @@
                             </div>
                         </div>
                     </div>
-                    <!-- /.row (nested) -->
+                     /.row (nested) --!>
                 </div>
-                <!-- /.col-lg-10 -->
+                 /.col-lg-10 --!>
             </div>
-            <!-- /.row -->
+             /.row --!>
         </div>
-        <!-- /.container -->
-    </section>
+         /.container --!>
+    </section> -->
 
-    <!-- Callout -->
+    <!-- Callout 
     <aside class="callout">
         <div class="text-vertical-center">
             <h1>Vertically Centered Text</h1>
         </div>
-    </aside>
+    </aside>-->
 
     <!-- Portfolio -->
     <section id="portfolio" class="portfolio">
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h2>Our Work</h2>
+                    <!--<h2>Our Work</h2>-->
                     <hr class="small">
                     <div class="row">
                         <div class="col-md-6">
@@ -207,7 +204,7 @@
         <!-- /.container -->
     </section>
 
-    <!-- Call to Action -->
+    <!-- Call to Action 
     <aside class="call-to-action bg-primary">
         <div class="container">
             <div class="row">
@@ -218,9 +215,9 @@
                 </div>
             </div>
         </div>
-    </aside>
+    </aside>-->
 
-    <!-- Map -->
+    <!-- Map
     <section id="contact" class="map">
         <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A&amp;output=embed"></iframe>
         <br />
@@ -228,7 +225,7 @@
             <a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A"></a>
         </small>
         </iframe>
-    </section>
+    </section> -->
 
     <!-- Footer -->
     <footer>
@@ -245,7 +242,7 @@
                         </li>
                     </ul>
                     <br>
-                    <ul class="list-inline">
+                    <!--<ul class="list-inline">
                         <li>
                             <a href="#"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
                         </li>
@@ -256,8 +253,8 @@
                             <a href="#"><i class="fa fa-dribbble fa-fw fa-3x"></i></a>
                         </li>
                     </ul>
-                    <hr class="small">
-                    <p class="text-muted">Copyright &copy; Your Website 2014</p>
+                    <hr class="small">-->
+                    <p class="text-muted">Copyright &copy; Shugars 2016</p>
                 </div>
             </div>
         </div>
