--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
         <ul class="sidebar-nav">
             <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
             <li class="sidebar-brand">
-                <a href="#top" onclick=$("#menu-close").click();>Start Bootstrap</a>
+                <a href="#projects" onclick=$("#menu-close").click();>Projects</a>
             </li>
             <li>
-                <a href="#top" onclick=$("#menu-close").click();>Home</a>
+                <a href="#resume" onclick=$("#menu-close").click();>Resume</a>
             </li>
-            <li>
+            <!--<li>
                 <a href="#about" onclick=$("#menu-close").click();>About</a>
-            </li>
+            </li>-->
             <li>
-                <a href="#portfolio" onclick=$("#menu-close").click();>Portfolio</a>
+                <a href="#portfolio" onclick=$("#menu-close").click();>Online Portfolio</a>
             </li>
             <li>
                 <a href="#contact" onclick=$("#menu-close").click();>Contact</a>
@@ -57,7 +57,7 @@
 
     <!-- Header -->
     <header id="top" class="header">
-        <div class="text-vertical-center">
+        <div class="text-vertical-left">
             <h1>Miranda Shugars</h1>
             <h3>Online Repository</h3>
             <br>
