--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <!-- Header -->
     <header id="top" class="header">
-        <div class="text-vertical-left">
+        <div class="text-vertical-leftcenter">
             <h1>Miranda Shugars</h1>
             <h3>Online Repository</h3>
             <br>
