--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
     </header>
 
-    <!-- About -->
+    <!-- About 
     <section id="about" class="about">
         <div class="container">
             <div class="row">
@@ -74,9 +74,9 @@
                     <p class="lead">This theme features some wonderful photography courtesy of <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a>.</p>
                 </div>
             </div>
-            <!-- /.row -->
+            <!-- /.row ->
         </div>
-        <!-- /.container -->
+        <!-- /.container ->
     </section>
 
     <!-- Services -->
@@ -167,8 +167,8 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="portfolio-item">
-                                <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-1.jpg">
+                                <a href="columbia/sectionNOZOMBIES2.jpg">
+                                    <img class="img-portfolio img-responsive" src="columbia/sectionNOZOMBIES2_sm.jpg">
                                 </a>
                             </div>
                         </div>
@@ -180,6 +180,20 @@
                             </div>
                         </div>
                         <div class="col-md-6">
+                            <div class="portfolio-item">
+                                <a href="#">
+                                    <img class="img-portfolio img-responsive" src="img/portfolio-3.jpg">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="portfolio-item">
+                                <a href="#">
+                                    <img class="img-portfolio img-responsive" src="img/portfolio-4.jpg">
+                                </a>
+                            </div>
+                        </div>
+                          <div class="col-md-6">
                             <div class="portfolio-item">
                                 <a href="#">
                                     <img class="img-portfolio img-responsive" src="img/portfolio-3.jpg">
@@ -232,13 +246,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h4><strong>Start Bootstrap</strong>
+                    <h4><strong>Questions or Commissions</strong>
                     </h4>
                     <p>3481 Melrose Place
                         <br>Beverly Hills, CA 90210</p>
                     <ul class="list-unstyled">
-                        <li><i class="fa fa-phone fa-fw"></i> (123) 456-7890</li>
-                        <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:name@example.com">name@example.com</a>
+                        <li><i class="fa fa-phone fa-fw"></i> (601) 618-9960</li>
+                        <li><i class="fa fa-envelope-o fa-fw"></i> <a href="miranda.shugars@gmail.com">miranda.shugars@gmail.com</a>
                         </li>
                     </ul>
                     <br>
