--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     </aside>-->
 
     <!-- Portfolio -->
-    <section id="portfolio" class="portfolio">
+    <section id="projects" class="portfolio">
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
@@ -231,19 +231,30 @@
         </div>
     </aside>-->
 
-    <!-- Map-->
-    <section id="contact" class="map">
-        <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="//e.issuu.com/embed.html#23923228/38906245"></iframe>
+    <!-- Online Portfolio-->
+    <section id="portfolio" class="map">
+        <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://issuu.com/shugars/docs/shugars_portfolio_2016"></iframe>
         <br />
         <small>
             <a href="https://issuu.com/shugars/docs/shugars_portfolio_2016/1?e=23923228/38906245"></a>
         </small>
         </iframe>
     </section>
+    
+        <!-- Resume-->
+    <section id="resume" class="map">
+        <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="shugars_CV (2).pdf"></iframe>
+        <br />
+        <small>
+            <a href="shugars_CV (2).pdf"></a>
+        </small>
+        </iframe>
+    </section>
+    
 
     <!-- Footer -->
     <footer>
-        <div class="container">
+        <div id="contact" class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h4><strong>Questions or Commissions</strong>
