--- a/index.html
+++ b/index.html
@@ -166,11 +166,12 @@
     <!-- Portfolio -->
     <section id="projects" class="portfolio">
         	<section class="wrapper style3 container special">
-
-							<header class="major">
-								<h5><strong>Featured Content</strong></h5>
-								<h2><p>Photographs <strong>Yosemite</strong></p></h2>
-							</header>
+		<div class="row">
+                      <!--  <div class="col-md-4">
+				<header class="major">
+					<h5><strong>Featured Content</strong></h5>
+					<h2><p>Photographs <strong>Yosemite</strong></p></h2>
+				</header>
 
 							<div class="row">
 								<div class="6u 12u(narrower)">
@@ -218,10 +219,10 @@
 								</div>
 							</div>
 						</section>
-					</section>
+					</section> -->
         
         
-    <!--    <div class="container">
+     <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h2>Our Work</h2>
@@ -229,8 +230,8 @@
                     <div class="row">
                         <div class="col-md-4">
                             <div class="portfolio-item">
-                                <a href="columbia/1/sectionNOZOMBIES2.jpg">
-                                    <img class="img-portfolio img-responsive" src="columbia/1/sectionNOZOMBIES2_sm.jpg">
+                                <a class="fancybox image featured" href="columbia/1/sectionNOZOMBIES2.jpg" title = "zombies n such"> <img alt="" src="images/pic04.jpg" />
+                                   <!-- <img class="img-portfolio img-responsive" src="columbia/1/sectionNOZOMBIES2_sm.jpg"> -->
                                 </a>
                             </div>
                         </div>
@@ -278,7 +279,7 @@
              /.row 
         </div>
          /.container 
-    </section>-->
+    </section>
 
     <!-- Call to Action 
     <aside class="call-to-action bg-primary">
