--- a/index.html
+++ b/index.html
@@ -166,7 +166,6 @@
     <!-- Portfolio -->
     <section id="projects" class="portfolio">
         	<section class="wrapper style3 container special">
-		<div class="row">
                       <!--  <div class="col-md-4">
 				<header class="major">
 					<h5><strong>Featured Content</strong></h5>
@@ -230,7 +229,8 @@
                     <div class="row">
                         <div class="col-md-4">
                             <div class="portfolio-item">
-                                <a class="fancybox image featured" href="columbia/1/sectionNOZOMBIES2.jpg" title = "zombies n such"> <img alt="" src="images/pic04.jpg" />
+                            <div class="wrapper style3 container special">
+                                <a class="fancybox image featured" href="columbia/1/sectionNOZOMBIES2.jpg" title = "zombies n such"> <img alt="" src="columbia/1/sectionNOZOMBIES2_sm.jpg">
                                    <!-- <img class="img-portfolio img-responsive" src="columbia/1/sectionNOZOMBIES2_sm.jpg"> -->
                                 </a>
                             </div>
