--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                         	
         <div id="demoLightbox" class="lightbox hide fade"  tabindex="-1" role="dialog" aria-hidden="true">
 		<div class='lightbox-content'>
-		<img src="image.png">
+		<img src="img/bg.jpg">
 		<div class="lightbox-caption"><p>Your caption here</p></div>
 		</div>
 	</div>
